--- a/index.html
+++ b/index.html
@@ -261,49 +261,49 @@
   <!-- Diagram Container -->
   <div class="diagram-container" id="diagramContainer2">
   <pre class="diagram">
-                                                                     +------------------------------------------+                                                                  
-                                                                     |           Cloud / Remote Server          |                                                                  
-                                                                     +------------------------------------------+                                                                  
-                                                                                        ↑                                                                                          
-                                                                                    [TCP/IP]                                                                                       
-                                                                                        ↓                                                                                          
-                                                                     +------------------------------------------+                                                                  
-                                                                     |              SenseCAP M2                 |                                                                  
-                                                                     |                 Gateway                  |                                                                  
-                                                                     +------------------------------------------+                                                                  
-                                                                                        ↑                                                                                          
-                                                                                    [LoRaWAN]                                                                                      
-                                                                                        ↓                                                                                          
-                                                                         +-------------------------------+                                                                         
-                                                                         |         reRouter CM4          |                                                                         
-                                                                         |           (IoT Hub)           |                                                                         
-                                                                         +--------------+----------------+                                                                         
-                                                                                        |                                                                                          
-                                                                                        |                                                                                          
-                                            +-------------------------------------------+---------------------------------------------+---------------------------------+          
-                                            |                                           |                                             |                                 |          
-                                        [Wireless]                                  [Wireless]                                    [Wireless]                        [Wireless]     
-                                            |                                           |                                             |                                 |          
-                         +------------------+-------------------+    +------------------+-------------------+    +--------------------+-----------------+    +----------+--------+ 
-                         |            XIAO ESP32-S3             |    |            XIAO ESP32-S3             |    |            XIAO ESP32-S3             |    |       XIAO 7"     | 
-                         |    Expansion Board Base with OLED    |    |    Expansion Board Base with OLED    |    |    Expansion Board Base with OLED    |    |    e-Paper Panel  | 
-                         +------------------+-------------------+    +------------------+-------------------+    +--------------------+-----------------+    +-------------------+ 
-                                            |                                           |                                             |                                            
-                                            |                                           |                                             |                                            
-                                     Analog Grove Port                         Actuator Grove Port                             Sensor Grove Port                                   
-                                            |                                           |                                             |                                            
-                                +-----------+-----------+                       +-------+---------+                           +-------+--------+                                   
-                                | Grove Voltage Divider |                       |   Grove Relay   |                           |  Grove Screw   |                                   
-                                |       (5V → 3.3V)     |                       |    (5V/10A)     |                           |    Terminal    |                                   
-                                +------- ---+--- -------+                       +-------+- -------+                           +------- --------+                                   
-                                            |                                           |                                             |                                            
-+-------------+                             |                                           |                                             |                                            
-|             |                   +---------+---------+                       +---------+---------+                            +------+-------+                    |              |
-|             |                   |      0-5VDC       |                       |  Direct Solenoid  |                            |  Flow Sensor |                    |              |
-|    Water    +--  Universal----->|    eTape Sensor   |--------Universal ---->|      Valve        |----------Universal ------->|    Meter     +-----Universal----->|     Water    |
-|   Source    |    Connector      |    Level Gauge    |        Connector      |    R-Series 12V   |          Connector         | R-Series 5V  |     Connector      |  Destination |
-|             |                   +-------------------+                       +-------------------+                            +--------------+                    |              |
-+-------------+                                                                                                                                                    +--------------+
+                                              +------------------------------------------+                                                                  
+                                              |           Cloud / Remote Server          |                                                                  
+                                              +------------------------------------------+                                                                  
+                                                                 ↑                                                                                          
+                                                             [TCP/IP]                                                                                       
+                                                                 ↓                                                                                          
+                                              +------------------------------------------+                                                                  
+                                              |              SenseCAP M2                 |                                                                  
+                                              |                 Gateway                  |                                                                  
+                                              +------------------------------------------+                                                                  
+                                                                 ↑                                                                                          
+                                                             [LoRaWAN]                                                                                      
+                                                                 ↓                                                                                          
+                                                  +-------------------------------+                                                                         
+                                                  |         reRouter CM4          |                                                                         
+                                                  |           (IoT Hub)           |                                                                         
+                                                  +--------------+----------------+                                                                         
+                                                                 |                                                                                          
+                                                                 |                                                                                          
+                     +-------------------------------------------+---------------------------------------------+---------------------------------+          
+                     |                                           |                                             |                                 |          
+                 [Wireless]                                  [Wireless]                                    [Wireless]                        [Wireless]     
+                     |                                           |                                             |                                 |          
+  +------------------+-------------------+    +------------------+-------------------+    +--------------------+-----------------+    +----------+--------+ 
+  |            XIAO ESP32-S3             |    |            XIAO ESP32-S3             |    |            XIAO ESP32-S3             |    |       XIAO 7"     | 
+  |    Expansion Board Base with OLED    |    |    Expansion Board Base with OLED    |    |    Expansion Board Base with OLED    |    |    e-Paper Panel  | 
+  +------------------+-------------------+    +------------------+-------------------+    +--------------------+-----------------+    +-------------------+ 
+                     |                                           |                                             |                                            
+                     |                                           |                                             |                                            
+              Analog Grove Port                         Actuator Grove Port                             Sensor Grove Port                                   
+                     |                                           |                                             |                                            
+         +-----------+-----------+                       +-------+---------+                           +-------+--------+                                   
+         | Grove Voltage Divider |                       |   Grove Relay   |                           |  Grove Screw   |                                   
+         |       (5V → 3.3V)     |                       |    (5V/10A)     |                           |    Terminal    |                                   
+         +------- ---+--- -------+                       +-------+- -------+                           +------- --------+                                   
+                     |                                           |                                             |                                            
++-------------+      |                                           |                                             |                                            
+|          +--│------+---------+                       +---------+---------+                            +------+-------+                    │              │
+|          |  │   0-5VDC       |                       |  Direct Solenoid  |                            |  Flow Sensor |                    │              │
+|    Water |  │ eTape Sensor   |--------Universal ---->|      Valve        |----------Universal ------->|    Meter     +-----Universal----->│     Water    │
+|   Source |  │ Level Gauge    |        Connector      |    R-Series 12V   |          Connector         | R-Series 5V  |     Connector      │  Destination │
+|          +--│----------------+                       +-------------------+                            +--------------+                    │              │
++-------------+                                                                                                                             └──────────────┘
 </pre>
 </div>
 	    
