--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Facebook/Twitter Sharing -->
     <meta property="og:title" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/18683650?v=4" />
-    <meta property="og:description" content="Always creative THINKING different! - I build IoT prototypes using open-source components & everyday tools. I merge the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability." />
+    <meta property="og:description" content="Always creative THINKING different! - I make IoT prototypes using open-source components & everyday tools. By merging the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability." />
       <!-- Twitter Sharing  -->
     <meta name="twitter:card" content="summary"/>
     <!-- Pinterest Sharing  -->
@@ -53,7 +53,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">Always creative THINKING different!</p>
-      <p class="about__text">I build IoT prototypes using open-source components & everyday tools. By merging the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability.
+      <p class="about__text">I make IoT prototypes using open-source components & everyday tools. By merging the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability.
       </p>
  
       <div>
@@ -468,12 +468,12 @@
   <p class="about__text">Comprehensive project approach includes:</p>
   <ul class="about__list" >
     <li class="about__list__item"><strong>Detailed Consultation:</strong> I work with you to understand your specific energy, water, and operational needs.</li>
-    <li class="about__list__item"><strong>Tailored Solution Design:</strong> I develop custom automation and IoT project that seamlessly integrate into your environment.</li>
-    <li class="about__list__item"><strong>Prototyping and Testing:</strong> I build and test prototypes to ensure that your project is scalable, reliable, and accurate.</li>
+    <li class="about__list__item"><strong>Tailored Solution Design:</strong> I develop a custom automation and IoT project that seamlessly integrate into your environment.</li>
+    <li class="about__list__item"><strong>Prototyping and Testing:</strong> I make and test prototypes to ensure that your project is scalable, reliable, and accurate.</li>
     <li class="about__list__item"><strong>Ongoing Support:</strong> I provide continuous guidance and support as you refine your project and expand its capabilities.</li>
   </ul>
   <p class="about__text">
-    If you’re exploring ideas in IoT and need a partner to help build a prototype that redefines resource management for your home or business, I can turn your innovative concepts into a sustainable, efficient reality.
+    If you’re exploring ideas in IoT and need a partner to help make a prototype that redefines resource management for your home or business, I can turn your innovative concepts into a sustainable, efficient reality.
   </p>
   <p class="about__text">
     Are you ready to transform your environment with intelligent automation and IoT? Let’s start the conversation and build solutions that are efficient, sustainable, and perfectly tailored to your needs.
