--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
   <h2 class="about__heading">Bringing Your IoT Vision to Life</h2>
   <p class="about__text">
-    As a Workflow Automation Expert, I'm uniquely positioned to help bring your IoT ideas to reality. My expertise and experience in integrating smart solutions across residential and commercial spaces means I can help you optimise electricity, gas and water management while streamlining your processes.
+    As a maker, I'm uniquely positioned to help bring your IoT ideas to reality. My expertise and experience in integrating smart solutions across residential and commercial spaces means I can help you optimise electricity, gas and water management while streamlining your processes.
   </p>
   <p class="about__text">Comprehensive project approach includes:</p>
   <ul class="about__list" >
