--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="hero__body">
         <h2 class="hero__subheading">👋 Hello, I’m Arnold Tonderai Marunda.</h2>
         <div class="hero__text">
-          <p class="hero__intro">✝️ Disciple of Christ Jesus. ♂♀ Married Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. 🪛 Make Things.</p>
+          <p class="hero__intro">✝️ Disciple of Christ Jesus. ♂♀ Married Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. 🪛 Maker of Things.</p>
         </div>
       </div>
     </section>
@@ -463,7 +463,7 @@
 
   <h2 class="about__heading">Bringing Your IoT Vision to Life</h2>
   <p class="about__text">
-    As a maker, I'm uniquely positioned to help bring your IoT ideas to reality. My expertise and experience in integrating smart solutions across residential and commercial spaces means I can help you optimise electricity, gas and water management while streamlining your processes.
+    As a maker of things, I'm uniquely positioned to help bring your IoT ideas to reality. My expertise and experience in integrating smart solutions across residential and commercial spaces means I can help you optimise electricity, gas and water management while streamlining your processes.
   </p>
   <p class="about__text">Comprehensive project approach includes:</p>
   <ul class="about__list" >
