--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
             <section aria-label="1" class="service">
               <h3 class="project__name">To Make</h3>
 	        <ul aria-label="Build and Develop" class="service__list" role="list">
-		<li class="service__list__item"><a href="https://seeedstudio.com" target="_blank" rel="nofollow"><img src="img/seeedstudio.jpeg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
+		<li class="service__list__item"><a href="https://www.seeedstudio.com" target="_blank" rel="nofollow"><img src="img/seeedstudio.jpeg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://dfrobot.com" target="_blank" rel="nofollow"><img src="img/df-robot(1).jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://milonetech.com" target="_blank" rel="nofollow"><img src="img/milone.png" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
